--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "quiz-app",
   "version": "0.1.0",
+  "homepage": "https://ankesh102.github.io/capstone-project",
   "private": true,
   "dependencies": {
     "@mdi/font": "^7.1.96",
@@ -19,8 +20,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
