--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "quiz-app",
   "version": "0.1.0",
-  "homepage": "https://ankesh102.github.io/capstone-project",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@mdi/font": "^7.1.96",
